--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0-rc.4",
-    "vue-class-component": "^8.0.0-0"
+    "vue-class-component": "^8.0.0-0",
+    "vue-router": "^4.0.0-beta.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
