deps: install chart.js/moment

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "ag-grid": "^18.1.2",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "moment": "^2.27.0",
     "popper.js": "^1.16.1",
     "vue": "^3.0.0-rc.4",
     "vue-class-component": "^8.0.0-0",
