--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.5.1",
     "moment": "^2.27.0",
     "popper.js": "^1.16.1",
+    "speak-tts": "^2.0.8",
     "vue": "^3.0.0-rc.4",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-beta.4"
